# og3_new_data_structures

./: 1_criticisms.txt  2_further_points.txt  3_criticisms.txt  4_answer_to_first_criticisms.md  CMakeLists.txt  PATCH_NOTES_FIXED.md  README.md  guided_tour.md  implementation_notes.md
examples/: example_layout_b.cpp  example_layout_b_coarse.cpp  example_layout_c.cpp  print_exchange_size.cpp  print_record_size.cpp
layouts_bench/: README.changes.md  README.first.md  README.md  VALIDATION.md  bench_common.h  fields.h  new_prompt
layouts_bench/og3_bench/: DOCUMENTATION.md  GUIDED_TOUR.md  Makefile  PARTITION_NOTES.md  README.md  VALIDATION.md  bench_common.c  bench_partition.c  bench_reshuffle.c  bench_sizes.c  bench_sizes_A  bench_sizes_Bc  bench_sizes_Bp  bench_sizes_C  boxleaves.c  boxleaves.h  hilbert.c  hilbert.h  layout_A.c  layout_Bc.c  layout_Bp.c  layout_C.c  layout_api.h  particle_init.c  particle_init.h
opg_common/include/opg_common/memory/: memory_arena.hpp
opg_common/include/opg_common/permutation/: permutation.hpp
opg_common/include/opg_common/tree/: box_leaf_base.hpp
opg_common/include/opg_common/types/: physics_config.hpp  scalar_types.hpp
opg_layout_b/include/opg_layout_b/: box_leaf.hpp  mutation.hpp  particle_container.hpp  particles.hpp  reshuffle.hpp
opg_layout_b_coarse/: README.md
opg_layout_b_coarse/include/opg_layout_b_coarse/: compact.hpp  mutation.hpp  pack_unpack.hpp  particle_container.hpp  particles.hpp  reshuffle.hpp
opg_layout_c/include/opg_layout_c/: box_leaf.hpp  mutation.hpp  particle_container.hpp  particles.hpp  reshuffle.hpp
tests/: run_regression_checks.sh
